--- a/variables/stg.yaml
+++ b/variables/stg.yaml
@@ -9,5 +9,7 @@ variables:
     value: "https://vh-bookings-api.staging.platform.hmcts.net/"
   - name: videoApiUrl
     value: "https://vh-video-api.staging.platform.hmcts.net/"
+  - name: userApiUrl
+    value: "https://vh-user-api.staging.platform.hmcts.net/"
   - name: audioLinkCaseNumber
     value: "Test Test Tuesday"
