--- a/variables/dev.yaml
+++ b/variables/dev.yaml
@@ -9,5 +9,7 @@ variables:
     value: "https://vh-bookings-api.dev.platform.hmcts.net/"
   - name: videoApiUrl
     value: "https://vh-video-api.dev.platform.hmcts.net/"
+  - name: userApiUrl
+    value: "https://vh-user-api.dev.platform.hmcts.net/"
   - name: audioLinkCaseNumber
     value: "VIH 9831"
