updated app settings

--- a/UI.AutomationTests/appsettings.json
+++ b/UI.AutomationTests/appsettings.json
@@ -80,7 +80,9 @@
     "BookingsApiUrl": "https://vh-bookings-api.dev.platform.hmcts.net/",
     "BookingsApiResourceId": "https://vh-bookings-api.dev.platform.hmcts.net",
     "VideoApiUrl": "https://vh-video-api.dev.platform.hmcts.net/",
-    "VideoApiResourceId": "https://vh-video-api.dev.platform.hmcts.net"
+    "VideoApiResourceId": "https://vh-video-api.dev.platform.hmcts.net",
+    "UserApiUrl": "https://vh-user-api.dev.platform.hmcts.net/",
+    "UserApiResourceId": "https://vh-user-api.dev.platform.hmcts.net"
   },
   "TestDataConfiguration": {
     "AudioLinkCaseNumber": "VIH 9831"
