--- a/UI.AutomationTests/UI.AutomationTests.csproj
+++ b/UI.AutomationTests/UI.AutomationTests.csproj
@@ -8,24 +8,20 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="BookingsApi.Client" Version="1.51.11-pr-0825-0004" />
+        <PackageReference Include="BookingsApi.Client" Version="2.0.3" />
         <PackageReference Include="ExtentReports" Version="4.1.0" />
-        <PackageReference Include="FluentAssertions" Version="6.11.0" />
+        <PackageReference Include="FluentAssertions" Version="6.12.0" />
         <PackageReference Include="LaunchDarkly.ServerSdk" Version="8.0.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.2" />
-        <PackageReference Include="NUnit" Version="3.13.3" />
+        <PackageReference Include="NUnit" Version="4.1.0" />
         <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
-        <PackageReference Include="NUnit.Analyzers" Version="3.6.1">
+        <PackageReference Include="NUnit.Analyzers" Version="4.1.0">
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="coverlet.collector" Version="6.0.0">
-          <PrivateAssets>all</PrivateAssets>
-          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
-        <PackageReference Include="UserApi.Client" Version="1.48.1" />
-        <PackageReference Include="VideoApi.Client" Version="1.48.4" />
-        <PackageReference Include="WebDriverManager" Version="2.17.1" />
+        <PackageReference Include="UserApi.Client" Version="1.49.1" />
+        <PackageReference Include="VideoApi.Client" Version="1.51.3" />
+        <PackageReference Include="WebDriverManager" Version="2.17.2" />
     </ItemGroup>
 
     <ItemGroup>
