--- a/UI.PageModels/UI.PageModels.csproj
+++ b/UI.PageModels/UI.PageModels.csproj
@@ -9,12 +9,10 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="BookingsApi.Client" Version="1.51.11-pr-0825-0004" />
-        <PackageReference Include="FluentAssertions" Version="6.11.0" />
-        <PackageReference Include="NUnit" Version="3.13.3" />
-        <PackageReference Include="Selenium.Axe" Version="4.0.13" />
-        <PackageReference Include="Selenium.Support" Version="4.10.0" />
-        <PackageReference Include="Selenium.WebDriver" Version="4.18.1" />
+        <PackageReference Include="BookingsApi.Client" Version="2.0.3" />
+        <PackageReference Include="Selenium.Axe" Version="4.0.17" />
+        <PackageReference Include="Selenium.Support" Version="4.19.0" />
+        <PackageReference Include="Selenium.WebDriver" Version="4.19.0" />
         <PackageReference Include="SeleniumExtras.WaitHelpers" Version="1.0.2" />
         <PackageReference Include="TextCopy" Version="6.2.1" />
     </ItemGroup>
