update url for saucelabs

--- a/UI.AutomationTests/appsettings.json
+++ b/UI.AutomationTests/appsettings.json
@@ -60,8 +60,8 @@
       "SauceLabsConfiguration": {
         "SauceUsername": "",
         "SauceAccessKey": "",
-        "SauceUrl": "ondemand.eu-central-1.saucelabs.com:80/wd/hub",
-        "SecureSauceUrl": "ondemand.eu-central-1.saucelabs.com:443/wd/hub",
+        "SauceUrl": "http://ondemand.eu-central-1.saucelabs.com:80/wd/hub",
+        "SecureSauceUrl": "https://ondemand.eu-central-1.saucelabs.com:443/wd/hub",
         "BrowserName": "Chrome",
         "PlatformName": "Windows",
         "PlatformVersion": "",
