--- a/pipelines/templates/run-ui-test.yaml
+++ b/pipelines/templates/run-ui-test.yaml
@@ -55,7 +55,7 @@ steps:
   - task: gitversion/setup@0
     displayName: Install GitVersion
     inputs:
-      versionSpec: "5.11.1"
+      versionSpec: "6.x"
 
   - task: gitversion/execute@0
     displayName: Determine Version
