update ui tests to use non expired case type (#238)
update api clients
add feature flag on interpreter tests

--- a/azure-pipelines.sds.daily.yml
+++ b/azure-pipelines.sds.daily.yml
@@ -25,6 +25,7 @@ parameters:
     default: Dev
     values:
       - Dev
+      - Demo
       - Test
       - Stg
 
@@ -59,8 +60,6 @@ stages:
                 value: ${{ variables.videoApiUrl }}
               - name: ApiClientConfiguration.UserApiUrl
                 value: ${{ variables.userApiUrl }}
-              - name: TestDataConfiguration.AudioLinkCaseNumber
-                value: ${{ variables.audioLinkCaseNumber }}
               - group: slack
 
             steps:
