--- a/pipelines/templates/run-ui-test.yaml
+++ b/pipelines/templates/run-ui-test.yaml
@@ -30,14 +30,14 @@ parameters:
     default: '8.x'
 
 steps:
-  - task: AzureKeyVault@1
+  - task: AzureKeyVault@2
     displayName: 'Azure Key Vault: vh-infra-core-${{ lower(parameters.environment) }}'
     inputs:
       azureSubscription: '${{ parameters.subscriptionName }}'
       KeyVaultName: 'vh-infra-core-${{ lower(parameters.environment) }}'
       SecretsFilter: 'azuread--tenantid'
 
-  - task: AzureKeyVault@1
+  - task: AzureKeyVault@2
     displayName: 'Azure Key Vault: vh-bookings-api-${{ lower(parameters.environment) }}'
     inputs:
       azureSubscription: '${{ parameters.subscriptionName }}'
@@ -78,12 +78,11 @@ steps:
       command: custom
       custom: --version
 
-  - task: FileTransform@1
+  - task: FileTransform@2
     displayName: Transform App Settings
     inputs:
       folderPath: ${{ parameters.projectpath }}
-      fileType: json
-      targetFiles: '**/appsettings.json'
+      jsonTargetFiles: '**/appsettings.json'
 
   - pwsh: |
       Get-Content "${{ parameters.projectpath }}/appsettings.json"
