reverting to filetransform v1 since v2 does not support json yet

--- a/pipelines/templates/run-ui-test.yaml
+++ b/pipelines/templates/run-ui-test.yaml
@@ -100,11 +100,12 @@ steps:
       command: custom
       custom: --version
 
-  - task: FileTransform@2
+  - task: FileTransform@1
     displayName: Transform App Settings
     inputs:
-      folderPath: ${{ parameters.projectpath }}/**/appsettings.json
-      jsonTargetFiles: '**/appsettings.json'
+      folderPath: ${{ parameters.projectpath }}
+      fileType: json
+      targetFiles: '**/appsettings.json'
 
   - pwsh: |
       Get-Content "${{ parameters.projectpath }}/appsettings.json"
