--- a/azure-pipelines.sds.daily.yml
+++ b/azure-pipelines.sds.daily.yml
@@ -42,6 +42,7 @@ stages:
     jobs:
       - ${{ if eq(parameters.runUITests, true) }}:
           - job: UI_Tests
+            cancelTimeoutInMinutes: 80
             displayName: UI Tests ${{ parameters.environment }}
             variables:
               - name: SystemConfiguration.EnvironmentConfigSettings.EnableAccessibilityCheck
