--- a/UI.AutomationTests/appsettings.json
+++ b/UI.AutomationTests/appsettings.json
@@ -38,11 +38,11 @@
     "LogSuffix": "EndToEndTest",
     "LogLocation": "../../../TestResults/Logs",
     "EnvironmentConfigSettings": {
-      "Environment": "Stg",
+      "Environment": "Development",
       "BrowserType": "Chrome",
       "ConnectionString": "",
-      "AdminUrl": "https://admin.staging.hearings.reform.hmcts.net/reform-login",
-      "VideoUrl": "https://video.staging.hearings.reform.hmcts.net",
+      "AdminUrl": "https://vh-admin-web.dev.platform.hmcts.net/reform-login",
+      "VideoUrl": "https://vh-video-web.dev.platform.hmcts.net",
       "UserPassword": "",
       "UKConferencePhoneNumber": "",
       "SoapApiUrl": "",
@@ -53,7 +53,7 @@
       "TestResultsDirectory": "default",
       "ReportLocation": "/TestResults/Reports",
       "ImageLocation": "/TestResults/Images",
-      "RunOnSauceLabs": true,
+      "RunOnSauceLabs": false,
       "EnableAccessibilityCheck": false,
       "AccessibilityReportFilePath": "vh-axe-result.json",
       "AccessibilityHtmlReportFilePath": "vh-axe-result.html",
