--- a/UI.AutomationTests/UI.AutomationTests.csproj
+++ b/UI.AutomationTests/UI.AutomationTests.csproj
@@ -18,6 +18,7 @@
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="Polly" Version="8.5.0" />
         <PackageReference Include="UserApi.Client" Version="2.1.1" />
         <PackageReference Include="VideoApi.Client" Version="3.0.4" />
         <PackageReference Include="WebDriverManager" Version="2.17.4" />
