--- a/UI.AutomationTests/appsettings.json
+++ b/UI.AutomationTests/appsettings.json
@@ -54,6 +54,7 @@
       "ReportLocation": "/TestResults/Reports",
       "ImageLocation": "/TestResults/Images",
       "RunOnSauceLabs": false,
+      "RunHeadless": false,
       "EnableAccessibilityCheck": false,
       "AccessibilityReportFilePath": "vh-axe-result.json",
       "AccessibilityHtmlReportFilePath": "vh-axe-result.html",
