--- a/azure-pipelines.sds.daily.yml
+++ b/azure-pipelines.sds.daily.yml
@@ -20,6 +20,21 @@ parameters:
     type: boolean
     default: true
 
+  - name: runOnSaucelabs
+    displayName: Run on SauceLabs
+    type: boolean
+    default: true
+
+  - name: adminWebOverrideUrl
+    displayName: Admin Web URL Override
+    type: string
+    default: ''
+
+  - name: videoWebOverrideUrl
+    displayName: Video Web URL Override
+    type: string
+    default: ''
+
   - name: environment
     type: string
     default: Dev
@@ -58,6 +73,9 @@ stages:
                   - template: variables/shared.yaml
                     parameters:
                       environment: ${{ parameters.environment }}
+                      runOnSauceLabs: ${{ parameters.runOnSaucelabs }}
+                      adminWebOverrideUrl: ${{ parameters.adminWebOverrideUrl }}
+                      videoWebOverrideUrl: ${{ parameters.videoWebOverrideUrl }}
                   - group: vh-automation-test-${{ parameters.environment }}
                   - group: FeatureFlags_${{ parameters.environment }}
                   - group: Saucelabs
@@ -107,6 +125,9 @@ stages:
               - template: variables/shared.yaml
                 parameters:
                   environment: ${{ parameters.environment }}
+                  runOnSauceLabs: ${{ parameters.runOnSaucelabs }}
+                  adminWebOverrideUrl: ${{ parameters.adminWebOverrideUrl }}
+                  videoWebOverrideUrl: ${{ parameters.videoWebOverrideUrl }}
               - group: vh-automation-test-${{ parameters.environment }}
               - group: Saucelabs
               - group: FeatureFlags_${{ parameters.environment }}
