--- a/variables/shared.yaml
+++ b/variables/shared.yaml
@@ -27,10 +27,21 @@ variables:
     value: $(Saucelabs:AccessKey)
   - name: SystemConfiguration.EnvironmentConfigSettings.UKConferencePhoneNumber
     value: $(ConferencePhoneNumber)
-  - name: SystemConfiguration.EnvironmentConfigSettings.AdminUrl
-    value: ${{ if eq(parameters.adminWebOverrideUrl, ' ') }}${{ variables.adminWebUrl }}${{ else }}${{ parameters.adminWebOverrideUrl }}
-  - name: SystemConfiguration.EnvironmentConfigSettings.VideoUrl
-    value: ${{ if eq(parameters.videoWebOverrideUrl, ' ') }}${{ variables.videoWebUrl }}${{ else }}${{ parameters.videoWebOverrideUrl }}
+
+  - ${{ if eq(parameters.adminWebOverrideUrl, ' ') }}:
+      - name: SystemConfiguration.EnvironmentConfigSettings.AdminUrl
+        value: ${{ variables.adminWebUrl }}
+  - ${{ else }}:
+      - name: SystemConfiguration.EnvironmentConfigSettings.AdminUrl
+        value: ${{ parameters.adminWebOverrideUrl }}
+
+  - ${{ if eq(parameters.videoWebOverrideUrl, ' ') }}:
+      - name: SystemConfiguration.EnvironmentConfigSettings.VideoUrl
+        value: ${{ variables.videoWebUrl }}
+  - ${{ else }}:
+      - name: SystemConfiguration.EnvironmentConfigSettings.VideoUrl
+        value: ${{ parameters.videoWebOverrideUrl }}
+
   - name: SystemConfiguration.EnvironmentConfigSettings.Environment
     value: ${{ parameters.environment }}
 
