--- a/UI.AutomationTests/UI.AutomationTests.csproj
+++ b/UI.AutomationTests/UI.AutomationTests.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
         <PackageReference Include="BookingsApi.Client" Version="3.0.5" />
+        <PackageReference Include="ChromeForTesting" Version="131.0.6778.85032" />
         <PackageReference Include="ExtentReports" Version="4.1.0" />
         <PackageReference Include="FluentAssertions" Version="6.12.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
