Update test setup to use reporter

--- a/UI.AutomationTests/appsettings.json
+++ b/UI.AutomationTests/appsettings.json
@@ -41,8 +41,8 @@
       "Environment": "Development",
       "BrowserType": "Chrome",
       "ConnectionString": "",
-      "AdminUrl": "https://vh-admin-web.dev.platform.hmcts.net/reform-login",
-      "VideoUrl": "https://vh-video-web.dev.platform.hmcts.net",
+      "AdminUrl": "https://localhost:5400/reform-login",
+      "VideoUrl": "https://vh-video-web-pr-2314.dev.platform.hmcts.net",
       "UserPassword": "",
       "UKConferencePhoneNumber": "",
       "SoapApiUrl": "",
@@ -51,9 +51,10 @@
       "SaucelabsElementWait": 40,
       "OneMinuteElementWait": 60,
       "TestResultsDirectory": "default",
-      "ReportLocation": "/TestResults/Reports",
-      "ImageLocation": "/TestResults/Images",
+      "ReportLocation": "./TestResults/Reports",
+      "ImageLocation": "./TestResults/Images",
       "RunOnSauceLabs": false,
+      "RunHeadlessBrowser": false,
       "EnableAccessibilityCheck": false,
       "AccessibilityReportFilePath": "vh-axe-result.json",
       "AccessibilityHtmlReportFilePath": "vh-axe-result.html",
@@ -77,7 +78,7 @@
     "ClientId": "ClientId",
     "ClientSecret": "ClientSecret",
     "TenantId": "TenantId",
-    "BookingsApiUrl": "https://vh-bookings-api.dev.platform.hmcts.net/",
+    "BookingsApiUrl": "https://localhost:5300/",
     "BookingsApiResourceId": "https://vh-bookings-api.dev.platform.hmcts.net",
     "VideoApiUrl": "https://vh-video-api.dev.platform.hmcts.net/",
     "VideoApiResourceId": "https://vh-video-api.dev.platform.hmcts.net",
