--- a/UI.AutomationTests/UI.AutomationTests.csproj
+++ b/UI.AutomationTests/UI.AutomationTests.csproj
@@ -8,9 +8,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="BookingsApi.Client" Version="3.0.5" />
+        <PackageReference Include="BookingsApi.Client" Version="3.1.2-pr-0919-0015" />
         <PackageReference Include="ChromeForTesting" Version="131.0.6778.85032" />
-        <PackageReference Include="ExtentReports" Version="4.1.0" />
+        <PackageReference Include="ExtentReports" Version="5.0.4" />
         <PackageReference Include="FluentAssertions" Version="6.12.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
         <PackageReference Include="NUnit" Version="4.1.0" />
