--- a/UI.PageModels/UI.PageModels.csproj
+++ b/UI.PageModels/UI.PageModels.csproj
@@ -9,7 +9,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="BookingsApi.Client" Version="3.0.5" />
+        <PackageReference Include="BookingsApi.Client" Version="3.1.2-pr-0919-0015" />
+        <PackageReference Include="ExtentReports" Version="5.0.4" />
         <PackageReference Include="Selenium.Axe" Version="4.0.21" />
         <PackageReference Include="Selenium.Support" Version="4.27.0" />
         <PackageReference Include="Selenium.WebDriver" Version="4.27.0" />
