--- a/UI.AutomationTests/appsettings.json
+++ b/UI.AutomationTests/appsettings.json
@@ -51,7 +51,7 @@
       "SaucelabsElementWait": 40,
       "OneMinuteElementWait": 60,
       "TestResultsDirectory": "default",
-      "ReportLocation": "./TestResults/Reports",
+      "ReportLocation": "",
       "ImageLocation": "./TestResults/Images",
       "RunOnSauceLabs": false,
       "RunHeadlessBrowser": false,
