--- a/azure-pipelines.sds.release.yml
+++ b/azure-pipelines.sds.release.yml
@@ -56,6 +56,8 @@ stages:
                 value: $(Build.ArtifactStagingDirectory)/TestResults/Logs
               - name: SystemConfiguration.EnvironmentConfigSettings.TestResultsDirectory
                 value: $(Build.ArtifactStagingDirectory)/TestResults/
+              - name: SystemConfiguration.EnvironmentConfigSettings.ReportLocation
+                value: $(Build.ArtifactStagingDirectory)/UITestReports/
 
             steps:
               # inserts variables to help create unique test names
@@ -92,3 +94,5 @@ stages:
                 inputs:
                   pathToPublish: "$(Build.ArtifactStagingDirectory)/TestResults/"
                   artifactName: TestResultsOutput
+                  
+              - task: 
