enable headless var

--- a/azure-pipelines.sds.daily.yml
+++ b/azure-pipelines.sds.daily.yml
@@ -102,7 +102,7 @@ stages:
                     condition: succeededOrFailed()
                     inputs:
                       pathToPublish: '$(Agent.TempDirectory)/'
-                      artifactName: UI_Report
+                      artifactName: UI_Html_Report
 
                   - task: PublishBuildArtifacts@1
                     displayName: Publish UI HTML Report
